--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ onload= initializeClock;
 </head>
 <body>
 <div id="container">
-  <h1>Hässliche Uhr lol</h1>
+  <h1>ugly clock lmao</h1>
   <canvas id="analog_clock" width="160" height="160">
     Sorry, canvas is not supported in this browser.
   </canvas>
